--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/learnsy
     username: postgres
-    password: admin
+    password: root1234
 
   jpa:
     show-sql: true
